[package]
name = "cbns"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.9.0"
actix-web = "2.0"
actix-web-actors = "2.0.0"

json = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures = "0.1"

tokio = { version = "0.2.11", features = ["full"] }

env_logger = "0.7.1"
rand = "0.7.3"
debug-rs = "0.1.3"

dotenv = "0.15.0"

askama = "0.9.0"
